# wfiis-4sem-oop

./: .gitignore  README.md
lab2/: CMakeLists.txt
lab2/include/: V.h
lab2/src/: V.cpp
lab3/: CMakeLists.txt
lab3/include/: FancyText.h
lab3/src/: FancyText.cpp
lab4/: CMakeLists.txt
lab4/include/: Funkcje.h  ZlozenieFunkcji.h
lab4/src/: Funkcje.cpp  ZlozenieFunkcji.cpp
lab5/: CMakeLists.txt
lab5/include/: Figura.h  KontenerFigur.h  Prostokat.h  Wierzcholek.h
lab5/src/: Figura.cpp  KontenerFigur.cpp  Prostokat.cpp  Wierzcholek.cpp
lab6/: CMakeLists.txt
lab6/include/: Formula.h  Primitive.h  Product.h  Ratio.h  Sum.h
lab6/src/: Formula.cpp  Primitive.cpp  Product.cpp  Ratio.cpp  Sum.cpp
lab7/: CMakeLists.txt  main.cpp
lab7/include/: Dir.h  File.h
lab7/src/: Dir.cpp  File.cpp
lab8/: CMakeLists.txt
lab8/include/: GameObj.h
lab8/src/: GameObj.cpp
lab9/: CMakeLists.txt
lab9/include/: Point2D.h
lab9/src/: Point2D.cpp
